{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 28,
  "lineage": "28f18064-3dc4-6dfa-a0d6-bb7f5fa79695",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706765272:security-group/sg-08d0a5fe9b4405854",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d0a5fe9b4405854",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "websocket-chat-alb-sg",
            "name_prefix": "",
            "owner_id": "651706765272",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "app": "websocket-chat"
            },
            "timeouts": null,
            "vpc_id": "vpc-090b5e3ebb8e6a923"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706765272:security-group/sg-0b86f7cf8e8c829e6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b86f7cf8e8c829e6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08d0a5fe9b4405854"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "websocket-chat-ecs-sg",
            "name_prefix": "",
            "owner_id": "651706765272",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "app": "websocket-chat"
            },
            "timeouts": null,
            "vpc_id": "vpc-090b5e3ebb8e6a923"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eips",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9aba7c2187b0dca",
            "arn": "arn:aws:ec2:us-east-1:651706765272:elastic-ip/eipalloc-0c9aba7c2187b0dca",
            "domain": "vpc",
            "id": "eipalloc-0c9aba7c2187b0dca",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-165-123-105.compute-1.amazonaws.com",
            "public_ip": "54.165.123.105",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "app": "websocket-chat"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09efaa1216f651b7f",
            "arn": "arn:aws:ec2:us-east-1:651706765272:elastic-ip/eipalloc-09efaa1216f651b7f",
            "domain": "vpc",
            "id": "eipalloc-09efaa1216f651b7f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-212-223-191.compute-1.amazonaws.com",
            "public_ip": "3.212.223.191",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "app": "websocket-chat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706765272:internet-gateway/igw-0a12c5ec1e8a7b184",
            "id": "igw-0a12c5ec1e8a7b184",
            "owner_id": "651706765272",
            "tags_all": {
              "app": "websocket-chat"
            },
            "vpc_id": "vpc-090b5e3ebb8e6a923"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9aba7c2187b0dca",
            "association_id": "eipassoc-04bd37e2adc411bc9",
            "connectivity_type": "public",
            "id": "nat-06fb0ed5e56f71a85",
            "network_interface_id": "eni-059e6ed5723c20ec3",
            "private_ip": "10.0.1.58",
            "public_ip": "54.165.123.105",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-049412c18e35428f8",
            "tags_all": {
              "app": "websocket-chat"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09efaa1216f651b7f",
            "association_id": "eipassoc-0b27cde932802b25c",
            "connectivity_type": "public",
            "id": "nat-0b8a21727e7aeeba7",
            "network_interface_id": "eni-0c58adeee70968af2",
            "private_ip": "10.0.2.17",
            "public_ip": "3.212.223.191",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ff9ee0fbbde4e12b",
            "tags_all": {
              "app": "websocket-chat"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706765272:route-table/rtb-09fe347ef842806a4",
            "id": "rtb-09fe347ef842806a4",
            "owner_id": "651706765272",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06fb0ed5e56f71a85",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "app": "websocket-chat"
            },
            "timeouts": null,
            "vpc_id": "vpc-090b5e3ebb8e6a923"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706765272:route-table/rtb-05697b21e91d5efc0",
            "id": "rtb-05697b21e91d5efc0",
            "owner_id": "651706765272",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b8a21727e7aeeba7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "app": "websocket-chat"
            },
            "timeouts": null,
            "vpc_id": "vpc-090b5e3ebb8e6a923"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706765272:route-table/rtb-0a35692ab0e2954f2",
            "id": "rtb-0a35692ab0e2954f2",
            "owner_id": "651706765272",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a12c5ec1e8a7b184",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "app": "websocket-chat"
            },
            "timeouts": null,
            "vpc_id": "vpc-090b5e3ebb8e6a923"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privates",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c4fa50dccc7bdca",
            "route_table_id": "rtb-09fe347ef842806a4",
            "subnet_id": "subnet-023779d8da602a838"
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09431e034d183af41",
            "route_table_id": "rtb-05697b21e91d5efc0",
            "subnet_id": "subnet-091ad88fce5f77330"
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publics",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0047294d9eb1a7c56",
            "route_table_id": "rtb-0a35692ab0e2954f2",
            "subnet_id": "subnet-049412c18e35428f8"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ace3e4e7bd87c93b",
            "route_table_id": "rtb-0a35692ab0e2954f2",
            "subnet_id": "subnet-0ff9ee0fbbde4e12b"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706765272:subnet/subnet-023779d8da602a838",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023779d8da602a838",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "651706765272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "app": "websocket-chat"
            },
            "vpc_id": "vpc-090b5e3ebb8e6a923"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706765272:subnet/subnet-091ad88fce5f77330",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091ad88fce5f77330",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "651706765272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "app": "websocket-chat"
            },
            "vpc_id": "vpc-090b5e3ebb8e6a923"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706765272:subnet/subnet-049412c18e35428f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049412c18e35428f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "651706765272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "app": "websocket-chat"
            },
            "vpc_id": "vpc-090b5e3ebb8e6a923"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706765272:subnet/subnet-0ff9ee0fbbde4e12b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff9ee0fbbde4e12b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "651706765272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "app": "websocket-chat"
            },
            "vpc_id": "vpc-090b5e3ebb8e6a923"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706765272:vpc/vpc-090b5e3ebb8e6a923",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a9afa9b492a3954e",
            "default_route_table_id": "rtb-0d0e0dfc860fba005",
            "default_security_group_id": "sg-01b20f0de2da5eecb",
            "dhcp_options_id": "dopt-05ddd0abcbe2fe7ae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090b5e3ebb8e6a923",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d0e0dfc860fba005",
            "owner_id": "651706765272",
            "tags_all": {
              "app": "websocket-chat"
            }
          }
        }
      ]
    }
  ]
}